--- a/welcome/templates/welcome/base.html
+++ b/welcome/templates/welcome/base.html
@@ -31,6 +31,9 @@
                 <li class="nav-item">
                     <a class="nav-link">Services</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'payment:payment' %}">Pay</a>
+                </li>
                 {% if user.is_authenticated %}
                 <li class="nav-item">
                     <a class="nav-link" href="#">Change Email</a>
