--- a/welcome/static/css/main.css
+++ b/welcome/static/css/main.css
@@ -236,6 +236,126 @@ img{
     padding-top: 120px;
 }
 
+.payment{
+    position: relative;
+    top: 60px;
+    height: 450px;
+    background-color: var(--primary-color);
+    border-radius: 20px;
+    padding: 20px;
+    color: #333;
+    margin: 10px;
+    box-shadow: 0 3px 10px rgba(0,0,0,.2);
+}
+
+.payment-data{
+    justify-self: flex-end;
+}
+
+.payment-data h2{
+    /* text-align: center; */
+    padding: 5px 0;
+    color: #fff;
+}
+
+.cards-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    height: 50px;
+    /* box-shadow: 0 3px 50px rgba(0,0,0,.2); */
+    padding: 5px;
+    border-radius: 20px;
+}
+.payment-cards.card{
+    width: 30%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+}
+
+.payment-cards:hover{
+    cursor: pointer;
+    border-bottom: 2px solid #fff;
+    /* background-color: rgb(0, 255, 60); */
+}
+
+
+.payment-input-data{
+    display: block;
+}
+.payment-data .input-group{
+    position: relative;
+    margin: 20px 0;
+    border-bottom: 2px solid #fff;
+}
+
+.payment-data .input-group label{
+    position: absolute;
+    top: 50%;
+    left: 5px;
+    transform: translateY(-50%);
+    transition: .5s;
+    pointer-events: none;
+    font-size: 16px;
+    color: #fff;
+}
+
+
+.payment-data .input-group input{
+    background: transparent;
+    border: none;
+    outline: none;
+    color: #fff;
+    width: 320px;
+    height: 40px;
+    padding: 0 5px;
+    font-size: 16px;
+}
+
+.payment-data .input-group input:focus~label,
+.payment-data .input-group input:valid~label{
+    top: -5px;
+}
+
+.payment-data .pay-btn{
+    width: 100%;
+    height: 40px;
+    font-weight: 500;
+}
+
+.payment-data .visacard-selected{
+    display: none;
+}
+
+.order-data h2{
+    color: #fff;
+    font-size: 40px;
+}
+
+table {
+    border-collapse: collapse;
+    width: 90%;
+  }
+  
+  td, th {
+    /* border: 1px solid #dddddd; */
+    text-align: left;
+    padding: 8px;
+    color: #fff;
+  }
+
+  table .order-value{
+    font-weight: 700 ;
+  }
+  
+  /* tr:nth-child(even) {
+    background-color: #dddddd;
+  } */
+
 
 .container{
     max-width: 1100px;
